Afgerond - FG‑01 PROFILE (MOTOR)

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -540,49 +540,60 @@
   "modules.riskRadarDemo.settings.saved": "Einstellungen gespeichert.",
   "profile.title": "Profil",
   "profile.subtitle": "Überblick und Verwaltung Ihrer Ziele. Alles Wichtige auf einen Blick.",
-  "profile.member.meta": "Mitglied seit {year} • Niveau: {level}",
+  "profile.avatar.hint": "Profilfoto ist verfügbar, sobald ein Konto aktiv ist.",
+  "profile.member.localTitle": "Lokales Profil",
+  "profile.member.localStatus": "Aktiv auf diesem Gerät",
+  "profile.member.since": "seit {date}",
   "profile.stats.trainings": "Trainings",
   "profile.stats.minutes": "Minuten",
   "profile.stats.weeks": "Wochen",
-  "profile.goal.title": "Bewegungsziel",
-  "profile.goal.hint": "Beeinflusst, welches Ziel in Ihrem Profil angezeigt wird.",
-  "profile.goal.condition": "Ausdauer verbessern",
-  "profile.goal.strength": "Kraft aufbauen",
-  "profile.goal.balance": "Balance & Stabilität",
-  "profile.goal.social": "Soziale Kontakte",
-  "profile.focus.title": "Bevorzugter Fokus",
-  "profile.focus.balanceStrength": "Fokus auf Balance & Kraft",
-  "profile.focus.endurance": "Ausdauer & Cardio",
-  "profile.focus.mobility": "Mobilität & Flexibilität",
-  "profile.focus.overall": "Ganzheitliche Fitness",
-  "profile.focus.hint": "Beeinflusst, welchen Fokus wir im Profil hervorheben.",
-  "profile.level.title": "Niveau",
-  "profile.level.hint": "Beeinflusst, welches Niveau neben Ihren Profilinfos steht.",
+  "profile.sessionsPerWeek.title": "Einheiten pro Woche",
+  "profile.sessionsPerWeek.helper": "Dieses Ziel steuert deinen Wochenfortschritt.",
+  "profile.focus.title": "Trainingsfokus",
+  "profile.focus.helper": "Steuert, welche Inhalte hervorgehoben werden.",
+  "profile.focus.options.cardio": "Cardio",
+  "profile.focus.options.strength": "Kraft & Muskeln",
+  "profile.focus.options.balance": "Balance & Beweglichkeit",
+  "profile.focus.options.brain": "Gehirntraining",
+  "profile.level.title": "Level",
+  "profile.level.l1.label": "L1 Beginner",
+  "profile.level.l1.description": "Starte mit ruhigen, klar geführten Einheiten.",
+  "profile.level.l2.label": "L2 Aktiv",
+  "profile.level.l2.description": "Du bist regelmäßig dran – weiter in deinem Tempo.",
+  "profile.level.l3.label": "L3 Fortgeschritten",
+  "profile.level.l3.description": "Stabiles Training, mit mehr Abwechslung und Anspruch.",
+  "profile.level.l4.label": "L4 Erfahren",
+  "profile.level.l4.description": "Routiniert aktiv – halte Pausen und Sicherheit im Blick.",
+  "profile.level.progressToNext": "Noch {points} Punkte bis zum nächsten Level.",
+  "profile.level.max": "Höchstes Level erreicht – einfach weiter dranbleiben.",
+  "profile.level.starter": "Einsteiger (ruhig)",
+  "profile.level.intermediate": "Mittel (aktiv)",
+  "profile.level.advanced": "Fortgeschritten (sportlich)",
   "profile.actions.edit": "Profil bearbeiten",
   "profile.actions.save": "Speichern",
   "profile.actions.cancel": "Abbrechen",
   "profile.version": "Fit4Senioren Version 2.1.0",
   "profile.displayName.placeholder": "Ihr Name",
   "profile.edit.title": "Profil bearbeiten",
-  "profile.edit.subtitle": "Nur das festhalten, was Ihr Profil wirklich beeinflusst.",
+  "profile.edit.subtitle": "Nur das festhalten, was deinen Wochenfortschritt steuert.",
   "profile.edit.name.title": "Name",
   "profile.edit.name.subtitle": "Für persönliche Anrede",
   "profile.edit.name.label": "Anzeigename",
-  "profile.edit.goal.title": "Bewegungsziel",
-  "profile.edit.goal.subtitle": "Beeinflusst das Ziel, das im Profil angezeigt wird.",
-  "profile.edit.level.title": "Niveau",
-  "profile.edit.level.subtitle": "Aktuelles Niveau (nicht bearbeitbar)",
-  "profile.edit.level.hint": "Beeinflusst die Niveaodarstellung im Profil.",
-  "profile.edit.focus.title": "Präferenz",
-  "profile.edit.focus.subtitle": "Beeinflusst den Fokus, den wir im Profil zeigen.",
-  "profile.level.starter": "Einsteiger (ruhig)",
-  "profile.level.intermediate": "Mittel (aktiv)",
-  "profile.level.advanced": "Fortgeschritten (sportlich)",
+  "profile.edit.sessions.title": "Einheiten pro Woche",
+  "profile.edit.sessions.subtitle": "Steuert deinen Wochenfortschritt.",
+  "profile.edit.sessions.label": "Einheiten pro Woche",
+  "profile.edit.sessions.helper": "Dieses Ziel steuert deinen Wochenfortschritt.",
+  "profile.edit.sessions.decrease": "Weniger Einheiten pro Woche",
+  "profile.edit.sessions.increase": "Mehr Einheiten pro Woche",
+  "profile.edit.level.title": "Level (nur Anzeige)",
+  "profile.edit.level.subtitle": "Wird automatisch aus Punkten berechnet.",
+  "profile.edit.focus.title": "Trainingsfokus",
+  "profile.edit.focus.subtitle": "Wähle, worauf dein Training ausgerichtet ist.",
   "profileMotor.recommendedForYou": "Empfohlen für dich",
   "profileMotor.onTrack": "Auf Kurs",
   "profileMotor.almostThere": "Fast geschafft",
   "profileMotor.sessionsLeft": "Noch {{n}} Einheiten diese Woche",
   "profileMotor.nextUp": "Als Nächstes",
-  "profileMotor.weeklyGoal": "Wochenziel",
+  "profileMotor.weeklyGoal": "Einheiten pro Woche",
   "profileMotor.reminderNudge": "Möchtest du eine Erinnerung setzen, um dein Wochenziel zu erreichen?"
 }
