--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -538,43 +538,54 @@
   "modules.riskRadarDemo.settings.thresholdLabel": "Default risk threshold",
   "modules.riskRadarDemo.settings.showHighRiskOnly": "Show only high-risk assets",
   "modules.riskRadarDemo.settings.saved": "Settings saved."
-  ,"profile.title": "Profile",
+,"profile.title": "Profile",
   "profile.subtitle": "View and manage your personal progress. See goals and level at a glance.",
-  "profile.member.meta": "Member since {year} • Level: {level}",
+  "profile.avatar.hint": "Profile photo is available once an account is active.",
+  "profile.member.localTitle": "Local profile",
+  "profile.member.localStatus": "Active on this device",
+  "profile.member.since": "since {date}",
   "profile.stats.trainings": "Sessions",
   "profile.stats.minutes": "Minutes",
   "profile.stats.weeks": "Weeks",
-  "profile.goal.title": "Movement goal",
-  "profile.goal.hint": "This influences the goal shown on your profile cards.",
-  "profile.goal.condition": "Improve endurance",
-  "profile.goal.strength": "Build strength",
-  "profile.goal.balance": "Balance & stability",
-  "profile.goal.social": "Social contact",
-  "profile.focus.title": "Preferred focus",
-  "profile.focus.balanceStrength": "Focus on balance & strength",
-  "profile.focus.endurance": "Endurance & cardio",
-  "profile.focus.mobility": "Mobility & flexibility",
-  "profile.focus.overall": "Overall fitness",
-  "profile.focus.hint": "This influences which focus we highlight in your profile.",
+  "profile.sessionsPerWeek.title": "Sessions per week",
+  "profile.sessionsPerWeek.helper": "This target drives your weekly progress.",
+  "profile.focus.title": "Training focus",
+  "profile.focus.helper": "Controls which content we highlight.",
+  "profile.focus.options.cardio": "Cardio",
+  "profile.focus.options.strength": "Strength & muscles",
+  "profile.focus.options.balance": "Balance & mobility",
+  "profile.focus.options.brain": "Brain training",
   "profile.level.title": "Level",
-  "profile.level.hint": "This influences the level shown next to your member info.",
+  "profile.level.l1.label": "L1 Beginner",
+  "profile.level.l1.description": "Start with calm, clearly guided sessions.",
+  "profile.level.l2.label": "L2 Active",
+  "profile.level.l2.description": "You show up regularly – keep going at your pace.",
+  "profile.level.l3.label": "L3 Advanced",
+  "profile.level.l3.description": "Solid routine with more variety and challenge.",
+  "profile.level.l4.label": "L4 Experienced",
+  "profile.level.l4.description": "Routinely active – keep breaks and safety in mind.",
+  "profile.level.progressToNext": "{points} points to the next level.",
+  "profile.level.max": "Highest level reached – stay consistent.",
   "profile.actions.edit": "Edit profile",
   "profile.actions.save": "Save",
   "profile.actions.cancel": "Cancel",
   "profile.version": "Fit4Seniors Version 2.1.0",
   "profile.displayName.placeholder": "Your name",
   "profile.edit.title": "Edit profile",
-  "profile.edit.subtitle": "Keep only the essentials that affect your profile.",
+  "profile.edit.subtitle": "Keep only the essentials that drive your weekly progress.",
   "profile.edit.name.title": "Name",
   "profile.edit.name.subtitle": "For personal greeting",
   "profile.edit.name.label": "Display name",
-  "profile.edit.goal.title": "Movement goal",
-  "profile.edit.goal.subtitle": "This influences the goal shown on your profile overview.",
-  "profile.edit.level.title": "Level",
-  "profile.edit.level.subtitle": "Current level (read-only)",
-  "profile.edit.level.hint": "This influences the level label shown on your profile.",
-  "profile.edit.focus.title": "Preference",
-  "profile.edit.focus.subtitle": "This influences the focus shown on your overview.",
+  "profile.edit.sessions.title": "Sessions per week",
+  "profile.edit.sessions.subtitle": "Drives your weekly progress.",
+  "profile.edit.sessions.label": "Sessions per week",
+  "profile.edit.sessions.helper": "This target drives your weekly progress.",
+  "profile.edit.sessions.decrease": "Fewer sessions per week",
+  "profile.edit.sessions.increase": "More sessions per week",
+  "profile.edit.level.title": "Level (read-only)",
+  "profile.edit.level.subtitle": "Calculated automatically from points.",
+  "profile.edit.focus.title": "Training focus",
+  "profile.edit.focus.subtitle": "Choose what your training is oriented toward.",
   "profile.level.starter": "Starter (Easy)",
   "profile.level.intermediate": "Intermediate (Active)",
   "profile.level.advanced": "Advanced (Sporty)",
@@ -583,7 +594,7 @@
   "profileMotor.almostThere": "Almost there",
   "profileMotor.sessionsLeft": "{n} sessions left this week",
   "profileMotor.nextUp": "Next up",
-  "profileMotor.weeklyGoal": "Weekly goal",
+  "profileMotor.weeklyGoal": "Sessions per week",
   "profileMotor.reminderNudge": "Want to set a reminder to reach your weekly goal?"
 }
 
