Afgerond - FG‑03 ACTIEVE TRAININGSSESSIE

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -400,10 +400,15 @@
   "completion.subtitle": "Jede Bewegung zählt – du machst das super.",
   "completion.cardTitle": "Training abgeschlossen!",
   "completion.body": "Du hast deine Einheit sicher beendet. Dein Körper und Geist danken es dir.",
+  "completion.stats.minutesUnit": "Minuten",
+  "completion.stats.sessionMinutesLabel": "Diese Einheit",
+  "completion.stats.totalMinutesLabel": "Trainingsminuten gesamt",
   "completion.stats.minutesLabel": "Minuten",
   "completion.stats.minutesValue": "20",
   "completion.stats.pointsLabel": "Punkte",
   "completion.stats.pointsValue": "+120",
+  "completion.stats.levelLabel": "Level",
+  "completion.stats.levelValue": "—",
   "completion.ctaBack": "Zurück zur Übersicht",
   "completion.ctaProgress": "Fortschritt ansehen",
   "completion.brain.title": "Starker Fokus!",
