--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -404,10 +404,15 @@
   "completion.subtitle": "Every move counts — you're doing great.",
   "completion.cardTitle": "Training completed!",
   "completion.body": "You finished your session safely. Your body and mind thank you.",
+  "completion.stats.minutesUnit": "minutes",
+  "completion.stats.sessionMinutesLabel": "This session",
+  "completion.stats.totalMinutesLabel": "Total exercise minutes",
   "completion.stats.minutesLabel": "Minutes",
   "completion.stats.minutesValue": "20",
   "completion.stats.pointsLabel": "Points",
   "completion.stats.pointsValue": "+120",
+  "completion.stats.levelLabel": "Level",
+  "completion.stats.levelValue": "—",
   "completion.ctaBack": "Back to overview",
   "completion.ctaProgress": "View progress",
   "completion.brain.title": "Great focus!",
