Gedeeltelijk Afgerond - Fase FG-04 tot FG-07

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -409,6 +409,8 @@
   "completion.stats.pointsValue": "+120",
   "completion.stats.levelLabel": "Level",
   "completion.stats.levelValue": "—",
+  "completion.pointsLabel": "Punkte",
+  "completion.levelProgress": "Noch {n} Punkte bis Level {next}",
   "completion.ctaBack": "Zurück zur Übersicht",
   "completion.ctaProgress": "Fortschritt ansehen",
   "completion.brain.title": "Starker Fokus!",
@@ -459,6 +461,10 @@
   "progress.kpi.weekDelta": "Einheiten diese Woche",
   "progress.kpi.totalMinutes": "Aktive Minuten",
   "progress.kpi.target": "Ziel: 300",
+  "progress.levelLabel": "Level",
+  "progress.activeMinutesThisWeek": "Aktive Minuten (diese Woche)",
+  "progress.minutesTargetLabel": "Wochenziel (Minuten)",
+  "progress.minutesToGoal": "Noch {n} Minuten bis zum Wochenziel",
   "progress.brain.title": "Gehirntraining",
   "progress.brain.weeklyCount": "Einheiten diese Woche: {count}",
   "progress.highlight.title": "Starker Start!",
@@ -575,6 +581,8 @@
   "profile.level.starter": "Einsteiger (ruhig)",
   "profile.level.intermediate": "Mittel (aktiv)",
   "profile.level.advanced": "Fortgeschritten (sportlich)",
+  "profile.minutesTarget.label": "Minuten pro Woche (optional)",
+  "profile.minutesTarget.helper": "Nur wenn du ein Ziel setzen möchtest. Sonst zeigen wir Minuten nur informativ.",
   "profile.actions.edit": "Profil bearbeiten",
   "profile.actions.save": "Speichern",
   "profile.actions.cancel": "Abbrechen",
