--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -413,6 +413,8 @@
   "completion.stats.pointsValue": "+120",
   "completion.stats.levelLabel": "Level",
   "completion.stats.levelValue": "—",
+  "completion.pointsLabel": "Points",
+  "completion.levelProgress": "{n} points to Level {next}",
   "completion.ctaBack": "Back to overview",
   "completion.ctaProgress": "View progress",
   "completion.brain.title": "Great focus!",
@@ -459,6 +461,10 @@
   "progress.kpi.weekDelta": "sessions this week",
   "progress.kpi.totalMinutes": "Active minutes",
   "progress.kpi.target": "Target: 300",
+  "progress.levelLabel": "Level",
+  "progress.activeMinutesThisWeek": "Active minutes (this week)",
+  "progress.minutesTargetLabel": "Weekly goal (minutes)",
+  "progress.minutesToGoal": "{n} minutes to weekly goal",
   "progress.brain.title": "Brain training",
   "progress.brain.weeklyCount": "Sessions this week: {count}",
   "progress.highlight.title": "Great start!",
@@ -572,6 +578,8 @@
   "profile.level.progressToNext": "{points} points to the next level.",
   "profile.level.progressToNextNamed": "{points} points to {level}.",
   "profile.level.max": "Highest level reached – stay consistent.",
+  "profile.minutesTarget.label": "Minutes per week (optional)",
+  "profile.minutesTarget.helper": "Only if you want to set a goal. Otherwise we show minutes only as information.",
   "profile.actions.edit": "Edit profile",
   "profile.actions.save": "Save",
   "profile.actions.cancel": "Cancel",
