Afgerond - FG-08 BRAIN DISCOVERY (OVERVIEW)

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -315,6 +315,17 @@
   "brain.overview.card.wordpuzzle.title": "Wortpuzzle",
   "brain.overview.card.wordpuzzle.subtitle": "Stärke Gedächtnis und Fokus",
   "brain.overview.start": "Sitzung starten",
+  "brain.overview.quickStart": "Jetzt starten",
+  "brain.overview.categoriesTitle": "Kategorien",
+  "brain.overview.openCategory": "Kategorie öffnen",
+  "brain.catalog.badge.available": "Verfügbar",
+  "brain.catalog.badge.planned": "Geplant (FG-09)",
+  "brain.catalog.comingSoon": "Kommt in FG-09",
+  "brain.category.exercisesTitle": "Übungen",
+  "brain.exercises.category": "Kategorie",
+  "brain.exercises.difficulty": "Level {{level}}",
+  "brain.exercises.duration": "~{{minutes}} Min",
+  "brain.exercise.detail.start": "Starten",
   "brain.session.headerTitle": "Wortpuzzle",
   "brain.session.section.focusLabel": "Kognitive Fokussierung",
   "brain.session.levelLabel": "Niveau: ",
@@ -325,6 +336,91 @@
   "brain.session.controls.reset": "Zurücksetzen",
   "brain.session.success": "Erfolg!",
   "brain.session.finish": "Beenden",
+  "brain.categories.memory.title": "Gedächtnis",
+  "brain.categories.memory.subtitle": "Wörter und Muster merken",
+  "brain.categories.attention.title": "Aufmerksamkeit",
+  "brain.categories.attention.subtitle": "Details schnell erfassen",
+  "brain.categories.reaction.title": "Reaktion",
+  "brain.categories.reaction.subtitle": "Zügig auf Signale reagieren",
+  "brain.categories.logic.title": "Logik",
+  "brain.categories.logic.subtitle": "Regeln & Problemlösen",
+  "brain.categories.flexibility.title": "Flexibilität",
+  "brain.categories.flexibility.subtitle": "Aufgaben flexibel wechseln",
+  "brain.exercises.wordpuzzle.title": "Wortpuzzle",
+  "brain.exercises.wordpuzzle.subtitle": "Finde das Zielwort",
+  "brain.exercises.wordpuzzle.description": "Wähle die Buchstaben in der richtigen Reihenfolge, um das Wort zu bilden.",
+  "brain.exercises.pairsMemory.title": "Bild-Paare",
+  "brain.exercises.pairsMemory.subtitle": "Passende Symbole finden",
+  "brain.exercises.pairsMemory.description": "Decke Karten auf und merke dir die Position der Motive.",
+  "brain.exercises.numberSequence.title": "Zahlenfolge",
+  "brain.exercises.numberSequence.subtitle": "Längere Reihen wiederholen",
+  "brain.exercises.numberSequence.description": "Präge dir Zahlenreihen ein und spiele sie etwas länger nach jeder Runde.",
+  "brain.exercises.pictureRecall.title": "Bilder merken",
+  "brain.exercises.pictureRecall.subtitle": "Gegenstände nach kurzer Ansicht erinnern",
+  "brain.exercises.pictureRecall.description": "Sieh dir wenige Bilder kurz an und rufe sie in der richtigen Reihenfolge ab.",
+  "brain.exercises.patternFill.title": "Muster ergänzen",
+  "brain.exercises.patternFill.subtitle": "Fehlende Kacheln einsetzen",
+  "brain.exercises.patternFill.description": "Erkenne Lücken in einfachen Mustern und setze das passende Teil ein.",
+  "brain.exercises.focusSelect.title": "Fokus-Treffer",
+  "brain.exercises.focusSelect.subtitle": "Nur das Zielsymbol antippen",
+  "brain.exercises.focusSelect.description": "Bleibe fokussiert und wähle die Ziele, während du Ablenkungen ausblendest.",
+  "brain.exercises.symbolSearch.title": "Symbolsuche",
+  "brain.exercises.symbolSearch.subtitle": "Symbole schnell finden",
+  "brain.exercises.symbolSearch.description": "Scanne ein Raster und tippe das passende Symbol so schnell wie möglich.",
+  "brain.exercises.oddOneOut.title": "Was passt nicht?",
+  "brain.exercises.oddOneOut.subtitle": "Regelbrecher erkennen",
+  "brain.exercises.oddOneOut.description": "Wähle das Element, das nicht zur Regel der kleinen Gruppe passt.",
+  "brain.exercises.targetCount.title": "Ziel zählen",
+  "brain.exercises.targetCount.subtitle": "Nur Zielobjekte mitzählen",
+  "brain.exercises.targetCount.description": "Zähle mit, während neue Elemente erscheinen, und bleibe dabei schnell.",
+  "brain.exercises.gridScan.title": "Raster merken",
+  "brain.exercises.gridScan.subtitle": "Zellen beobachten und markieren",
+  "brain.exercises.gridScan.description": "Präge dir ein markiertes Raster ein und stelle es aus dem Gedächtnis nach.",
+  "brain.exercises.goNoGo.title": "Go / No-Go",
+  "brain.exercises.goNoGo.subtitle": "Nur auf Go reagieren",
+  "brain.exercises.goNoGo.description": "Tippe bei Go-Signalen und halte inne, wenn das Stoppsignal erscheint.",
+  "brain.exercises.stopSignal.title": "Stoppsignal",
+  "brain.exercises.stopSignal.subtitle": "Bei Stop sofort anhalten",
+  "brain.exercises.stopSignal.description": "Bereite den Tap vor, stoppe aber sofort, wenn das Stoppsignal gezeigt wird.",
+  "brain.exercises.colorTap.title": "Farben-Tap",
+  "brain.exercises.colorTap.subtitle": "Bei richtiger Farbe tippen",
+  "brain.exercises.colorTap.description": "Reagiere auf die richtige Farbe und blende Ablenkungen aus.",
+  "brain.exercises.quickDirection.title": "Schnelle Richtung",
+  "brain.exercises.quickDirection.subtitle": "Pfeilen rasch folgen",
+  "brain.exercises.quickDirection.description": "Tippe den Pfeil, der zur angezeigten Richtung passt.",
+  "brain.exercises.flashNumber.title": "Blitz-Zahl",
+  "brain.exercises.flashNumber.subtitle": "Auf aufblitzende Zahlen reagieren",
+  "brain.exercises.flashNumber.description": "Zahlen blitzen kurz auf – tippe sofort, wenn eine Zielzahl erscheint.",
+  "brain.exercises.sequenceLogic.title": "Folge-Logik",
+  "brain.exercises.sequenceLogic.subtitle": "Nächstes Element wählen",
+  "brain.exercises.sequenceLogic.description": "Finde das fehlende Element, das die Reihe sinnvoll fortsetzt.",
+  "brain.exercises.ruleSwitch.title": "Regelwechsel",
+  "brain.exercises.ruleSwitch.subtitle": "Zwischen Regeln umschalten",
+  "brain.exercises.ruleSwitch.description": "Wende wechselnde Sortierregeln auf die gezeigten Elemente an.",
+  "brain.exercises.sortingShapes.title": "Formen sortieren",
+  "brain.exercises.sortingShapes.subtitle": "Nach Form und Farbe ordnen",
+  "brain.exercises.sortingShapes.description": "Lege jedes Element in den passenden Bereich je nach Vorgabe.",
+  "brain.exercises.groupingSets.title": "Gruppen bilden",
+  "brain.exercises.groupingSets.subtitle": "Was gehört zusammen?",
+  "brain.exercises.groupingSets.description": "Wähle Elemente, die derselben einfachen Regel folgen.",
+  "brain.exercises.logicPaths.title": "Logik-Pfade",
+  "brain.exercises.logicPaths.subtitle": "Route mit Regeln planen",
+  "brain.exercises.logicPaths.description": "Navigiere ein kleines Labyrinth, indem du den Regelhinweisen folgst.",
+  "brain.exercises.alternatingTrail.title": "Wechselspur",
+  "brain.exercises.alternatingTrail.subtitle": "Zwischen zwei Reihen wechseln",
+  "brain.exercises.alternatingTrail.description": "Tippe Zahlen und Buchstaben abwechselnd, ohne den Faden zu verlieren.",
+  "brain.exercises.verbalFluency.title": "Wortfluss",
+  "brain.exercises.verbalFluency.subtitle": "Wörter zu Kategorien nennen",
+  "brain.exercises.verbalFluency.description": "Finde passende Wörter in ruhigen Zeitfenstern.",
+  "brain.exercises.reverseDigits.title": "Ziffern rückwärts",
+  "brain.exercises.reverseDigits.subtitle": "Zahlen rückwärts wiederholen",
+  "brain.exercises.reverseDigits.description": "Höre oder sieh Ziffern und gib sie in umgekehrter Reihenfolge wieder.",
+  "brain.exercises.spatialMatrix.title": "Räumliche Matrix",
+  "brain.exercises.spatialMatrix.subtitle": "Positionen merken",
+  "brain.exercises.spatialMatrix.description": "Merke dir leuchtende Felder und stelle ihre Positionen nach.",
+  "brain.exercises.rhythmPace.title": "Rhythmus-Takt",
+  "brain.exercises.rhythmPace.subtitle": "Im Takt tippen",
+  "brain.exercises.rhythmPace.description": "Folge einem ruhigen Rhythmus und tippe im passenden Moment.",
   "app.footer.navigation": "Hauptnavigation",
   "trainingInfo.title": "Trainingsinfo",
   "trainingInfo.panel.title": "Trainingsinformationen",
