--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -315,6 +315,17 @@
   "brain.overview.card.wordpuzzle.title": "Word puzzle",
   "brain.overview.card.wordpuzzle.subtitle": "Sharpen memory with quick puzzles",
   "brain.overview.start": "Start session",
+  "brain.overview.quickStart": "Start now",
+  "brain.overview.categoriesTitle": "Categories",
+  "brain.overview.openCategory": "Open category",
+  "brain.catalog.badge.available": "Available",
+  "brain.catalog.badge.planned": "Planned (FG-09)",
+  "brain.catalog.comingSoon": "Coming in FG-09",
+  "brain.category.exercisesTitle": "Exercises",
+  "brain.exercises.category": "Category",
+  "brain.exercises.difficulty": "Level {{level}}",
+  "brain.exercises.duration": "~{{minutes}} min",
+  "brain.exercise.detail.start": "Start",
   "brain.session.headerTitle": "Word puzzle",
   "brain.session.section.focusLabel": "Cognitive focus",
   "brain.session.levelLabel": "Level: ",
@@ -325,6 +336,91 @@
   "brain.session.controls.reset": "Reset",
   "brain.session.success": "Success!",
   "brain.session.finish": "Finish",
+  "brain.categories.memory.title": "Memory",
+  "brain.categories.memory.subtitle": "Remember words and patterns",
+  "brain.categories.attention.title": "Attention",
+  "brain.categories.attention.subtitle": "Focus on details quickly",
+  "brain.categories.reaction.title": "Reaction",
+  "brain.categories.reaction.subtitle": "Respond to signals fast",
+  "brain.categories.logic.title": "Logic",
+  "brain.categories.logic.subtitle": "Rules and problem solving",
+  "brain.categories.flexibility.title": "Flexibility",
+  "brain.categories.flexibility.subtitle": "Switch tasks with ease",
+  "brain.exercises.wordpuzzle.title": "Word puzzle",
+  "brain.exercises.wordpuzzle.subtitle": "Find the hidden word",
+  "brain.exercises.wordpuzzle.description": "Pick letters in the right order to build the target word.",
+  "brain.exercises.pairsMemory.title": "Card pairs",
+  "brain.exercises.pairsMemory.subtitle": "Find matching icons",
+  "brain.exercises.pairsMemory.description": "Flip pairs and remember where each symbol is placed.",
+  "brain.exercises.numberSequence.title": "Number sequence",
+  "brain.exercises.numberSequence.subtitle": "Repeat growing sequences",
+  "brain.exercises.numberSequence.description": "Remember and replay number orders that get a bit longer each round.",
+  "brain.exercises.pictureRecall.title": "Picture recall",
+  "brain.exercises.pictureRecall.subtitle": "Recall items after a short look",
+  "brain.exercises.pictureRecall.description": "View a few pictures briefly, then recall them in the right order.",
+  "brain.exercises.patternFill.title": "Pattern fill",
+  "brain.exercises.patternFill.subtitle": "Complete missing tiles",
+  "brain.exercises.patternFill.description": "Spot gaps in simple patterns and place the correct tile.",
+  "brain.exercises.focusSelect.title": "Focus select",
+  "brain.exercises.focusSelect.subtitle": "Tap only the target symbol",
+  "brain.exercises.focusSelect.description": "Stay focused by selecting targets while ignoring distractors.",
+  "brain.exercises.symbolSearch.title": "Symbol search",
+  "brain.exercises.symbolSearch.subtitle": "Find symbols fast",
+  "brain.exercises.symbolSearch.description": "Scan a grid and tap the matching symbol as quickly as you can.",
+  "brain.exercises.oddOneOut.title": "Odd one out",
+  "brain.exercises.oddOneOut.subtitle": "Spot what does not belong",
+  "brain.exercises.oddOneOut.description": "Choose the item that breaks the rule in each small set.",
+  "brain.exercises.targetCount.title": "Target count",
+  "brain.exercises.targetCount.subtitle": "Count only target shapes",
+  "brain.exercises.targetCount.description": "Keep a running count while items appear and update quickly.",
+  "brain.exercises.gridScan.title": "Grid scan",
+  "brain.exercises.gridScan.subtitle": "Remember and mark cells",
+  "brain.exercises.gridScan.description": "Observe a highlighted grid pattern and reproduce it from memory.",
+  "brain.exercises.goNoGo.title": "Go / No-Go",
+  "brain.exercises.goNoGo.subtitle": "React only to go signals",
+  "brain.exercises.goNoGo.description": "Tap on go cues and hold back when the stop cue appears.",
+  "brain.exercises.stopSignal.title": "Stop signal",
+  "brain.exercises.stopSignal.subtitle": "Stop when the cue changes",
+  "brain.exercises.stopSignal.description": "Prepare to tap, but cancel quickly when a stop signal is shown.",
+  "brain.exercises.colorTap.title": "Color tap",
+  "brain.exercises.colorTap.subtitle": "Tap when the color appears",
+  "brain.exercises.colorTap.description": "React to the correct color while ignoring distractors.",
+  "brain.exercises.quickDirection.title": "Quick direction",
+  "brain.exercises.quickDirection.subtitle": "Follow arrows fast",
+  "brain.exercises.quickDirection.description": "Tap the arrow that matches the direction shown on screen.",
+  "brain.exercises.flashNumber.title": "Flash number",
+  "brain.exercises.flashNumber.subtitle": "React to flashing numbers",
+  "brain.exercises.flashNumber.description": "Numbers flash briefly—tap as soon as a target number appears.",
+  "brain.exercises.sequenceLogic.title": "Sequence logic",
+  "brain.exercises.sequenceLogic.subtitle": "Choose the next in line",
+  "brain.exercises.sequenceLogic.description": "Find the missing element that completes the sequence.",
+  "brain.exercises.ruleSwitch.title": "Rule switch",
+  "brain.exercises.ruleSwitch.subtitle": "Switch rules on the fly",
+  "brain.exercises.ruleSwitch.description": "Apply changing sorting rules to the items you see.",
+  "brain.exercises.sortingShapes.title": "Sorting shapes",
+  "brain.exercises.sortingShapes.subtitle": "Sort by shape and color",
+  "brain.exercises.sortingShapes.description": "Pick the correct bucket for each item based on the prompt.",
+  "brain.exercises.groupingSets.title": "Grouping sets",
+  "brain.exercises.groupingSets.subtitle": "Group what belongs together",
+  "brain.exercises.groupingSets.description": "Select items that share the same simple rule.",
+  "brain.exercises.logicPaths.title": "Logic paths",
+  "brain.exercises.logicPaths.subtitle": "Plan the correct route",
+  "brain.exercises.logicPaths.description": "Navigate a small maze by following rule hints.",
+  "brain.exercises.alternatingTrail.title": "Alternating trail",
+  "brain.exercises.alternatingTrail.subtitle": "Switch between two sequences",
+  "brain.exercises.alternatingTrail.description": "Tap numbers and letters in alternating order without losing track.",
+  "brain.exercises.verbalFluency.title": "Word sprint",
+  "brain.exercises.verbalFluency.subtitle": "Name words in categories",
+  "brain.exercises.verbalFluency.description": "Think of fitting words within calm time windows.",
+  "brain.exercises.reverseDigits.title": "Reverse digits",
+  "brain.exercises.reverseDigits.subtitle": "Repeat numbers backwards",
+  "brain.exercises.reverseDigits.description": "Hear or see digits and play them back in reverse order.",
+  "brain.exercises.spatialMatrix.title": "Spatial matrix",
+  "brain.exercises.spatialMatrix.subtitle": "Remember positions",
+  "brain.exercises.spatialMatrix.description": "Observe lit-up tiles and reproduce their locations.",
+  "brain.exercises.rhythmPace.title": "Rhythm pace",
+  "brain.exercises.rhythmPace.subtitle": "Tap to a simple beat",
+  "brain.exercises.rhythmPace.description": "Follow a calm rhythm and tap in time.",
   "app.footer.navigation": "Main navigation",
   "trainingInfo.title": "Training Info",
   "trainingInfo.panel.title": "Training information",
