Afgerond - FG-09a rain Training v1.1 – Multi-exercise foundation

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -336,6 +336,14 @@
   "brain.session.controls.reset": "Zurücksetzen",
   "brain.session.success": "Erfolg!",
   "brain.session.finish": "Beenden",
+  "brain.session.roundLabel": "Runde {{current}}/{{total}}",
+  "brain.session.correctShort": "richtig",
+  "brain.session.completedTitle": "Geschafft!",
+  "brain.session.correctSummary": "Richtig: {{correct}}/{{total}}",
+  "brain.session.retry": "Nochmal",
+  "brain.session.backToOverview": "Zur Übersicht",
+  "brain.session.feedback.correct": "Gut gemacht!",
+  "brain.session.feedback.incorrect": "Versuch es nochmal",
   "brain.categories.memory.title": "Gedächtnis",
   "brain.categories.memory.subtitle": "Wörter und Muster merken",
   "brain.categories.attention.title": "Aufmerksamkeit",
@@ -349,6 +357,30 @@
   "brain.exercises.wordpuzzle.title": "Wortpuzzle",
   "brain.exercises.wordpuzzle.subtitle": "Finde das Zielwort",
   "brain.exercises.wordpuzzle.description": "Wähle die Buchstaben in der richtigen Reihenfolge, um das Wort zu bilden.",
+  "brain.exercises.memoryStoryGaps.title": "Geschichten-Lücken",
+  "brain.exercises.memoryStoryGaps.subtitle": "Fehlendes Wort einsetzen",
+  "brain.exercises.memoryStoryGaps.description": "Lies den kurzen Satz und wähle das Wort, das ihn vervollständigt.",
+  "brain.exercises.memoryObjects.title": "Alltagsgegenstände",
+  "brain.exercises.memoryObjects.subtitle": "Welcher Gegenstand passt?",
+  "brain.exercises.memoryObjects.description": "Erinnere dich an Dinge aus dem Alltag und wähle das passende Objekt.",
+  "brain.exercises.attentionOddOneOut.title": "Was passt nicht?",
+  "brain.exercises.attentionOddOneOut.subtitle": "Finde den Ausreißer",
+  "brain.exercises.attentionOddOneOut.description": "Drei Dinge gehören zusammen – tippe das, was nicht passt.",
+  "brain.exercises.attentionColorWord.title": "Farbwort",
+  "brain.exercises.attentionColorWord.subtitle": "Tippe die genannte Farbe",
+  "brain.exercises.attentionColorWord.description": "Ignoriere die Schriftfarbe und wähle das geschriebene Wort.",
+  "brain.exercises.logicNextInSeries.title": "Logische Reihe",
+  "brain.exercises.logicNextInSeries.subtitle": "Setze die Zahl fort",
+  "brain.exercises.logicNextInSeries.description": "Erkenne das Muster und wähle die nächste Zahl in der Folge.",
+  "brain.exercises.logicGrouping.title": "Gruppierung",
+  "brain.exercises.logicGrouping.subtitle": "Finde den Fremdkörper",
+  "brain.exercises.logicGrouping.description": "Wähle das Element, das nicht zur Gruppe passt.",
+  "brain.exercises.flexReverse.title": "Umkehr-Regel",
+  "brain.exercises.flexReverse.subtitle": "Reagiere gegenteilig",
+  "brain.exercises.flexReverse.description": "Folge Anweisungen, die das Gegenteil verlangen.",
+  "brain.exercises.flexSwitchRules.title": "Regelwechsel",
+  "brain.exercises.flexSwitchRules.subtitle": "Abwechselnd größte/kleinste Zahl",
+  "brain.exercises.flexSwitchRules.description": "Gerade Runden: größte Zahl, ungerade Runden: kleinste Zahl.",
   "brain.exercises.pairsMemory.title": "Bild-Paare",
   "brain.exercises.pairsMemory.subtitle": "Passende Symbole finden",
   "brain.exercises.pairsMemory.description": "Decke Karten auf und merke dir die Position der Motive.",
