--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -336,6 +336,14 @@
   "brain.session.controls.reset": "Reset",
   "brain.session.success": "Success!",
   "brain.session.finish": "Finish",
+  "brain.session.roundLabel": "Round {{current}}/{{total}}",
+  "brain.session.correctShort": "correct",
+  "brain.session.completedTitle": "Completed!",
+  "brain.session.correctSummary": "Correct: {{correct}}/{{total}}",
+  "brain.session.retry": "Retry",
+  "brain.session.backToOverview": "Back to overview",
+  "brain.session.feedback.correct": "Great job!",
+  "brain.session.feedback.incorrect": "Try again",
   "brain.categories.memory.title": "Memory",
   "brain.categories.memory.subtitle": "Remember words and patterns",
   "brain.categories.attention.title": "Attention",
@@ -349,6 +357,30 @@
   "brain.exercises.wordpuzzle.title": "Word puzzle",
   "brain.exercises.wordpuzzle.subtitle": "Find the hidden word",
   "brain.exercises.wordpuzzle.description": "Pick letters in the right order to build the target word.",
+  "brain.exercises.memoryStoryGaps.title": "Story gaps",
+  "brain.exercises.memoryStoryGaps.subtitle": "Fill the missing word",
+  "brain.exercises.memoryStoryGaps.description": "Read the short line and pick the word that completes it.",
+  "brain.exercises.memoryObjects.title": "Everyday objects",
+  "brain.exercises.memoryObjects.subtitle": "Pick the fitting item",
+  "brain.exercises.memoryObjects.description": "Recall common objects and choose the one that matches the prompt.",
+  "brain.exercises.attentionOddOneOut.title": "Odd one out",
+  "brain.exercises.attentionOddOneOut.subtitle": "Find what does not belong",
+  "brain.exercises.attentionOddOneOut.description": "Three items belong together — tap the one that differs.",
+  "brain.exercises.attentionColorWord.title": "Color word",
+  "brain.exercises.attentionColorWord.subtitle": "Tap the written color",
+  "brain.exercises.attentionColorWord.description": "Ignore the font color and choose the word that names the color.",
+  "brain.exercises.logicNextInSeries.title": "Next in series",
+  "brain.exercises.logicNextInSeries.subtitle": "Complete the number pattern",
+  "brain.exercises.logicNextInSeries.description": "Spot the rule and choose the next number in the line.",
+  "brain.exercises.logicGrouping.title": "Grouping",
+  "brain.exercises.logicGrouping.subtitle": "Find the outsider",
+  "brain.exercises.logicGrouping.description": "Choose the element that does not fit the group.",
+  "brain.exercises.flexReverse.title": "Reverse choice",
+  "brain.exercises.flexReverse.subtitle": "Do the opposite",
+  "brain.exercises.flexReverse.description": "Follow instructions that ask you to pick the opposite response.",
+  "brain.exercises.flexSwitchRules.title": "Switching rules",
+  "brain.exercises.flexSwitchRules.subtitle": "Alternate rules each round",
+  "brain.exercises.flexSwitchRules.description": "Pick the largest number on even rounds and the smallest on odd rounds.",
   "brain.exercises.pairsMemory.title": "Card pairs",
   "brain.exercises.pairsMemory.subtitle": "Find matching icons",
   "brain.exercises.pairsMemory.description": "Flip pairs and remember where each symbol is placed.",
