Afgerond - FG-09 en FG-10 volgens Fit4Seniors — Full L4 Completion Track.pdf

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -326,6 +326,8 @@
   "brain.exercises.difficulty": "Level {{level}}",
   "brain.exercises.duration": "~{{minutes}} Min",
   "brain.exercise.detail.start": "Starten",
+  "brain.detail.infoLabel": "Info",
+  "brain.panel.title": "Übungsinfo",
   "brain.session.headerTitle": "Wortpuzzle",
   "brain.session.section.focusLabel": "Kognitive Fokussierung",
   "brain.session.levelLabel": "Niveau: ",
